--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -10,7 +10,8 @@
   .card-signin {
     border: 0;
     border-radius: 1rem;
-    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.5);
+    background-color: rgba(227, 232, 238, 0.95);
   }
   
   .card-signin .card-title {
