--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -7,11 +7,13 @@
     color:rgb(168, 214, 232);
     font-size: 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    text-decoration: none;
 }
 
 .logo{
     color:rgb(255, 255, 255);
     font-size: 30px;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    text-decoration: none;
 }
 
