--- a/src/Pages/Add/Add.css
+++ b/src/Pages/Add/Add.css
@@ -1,11 +1,9 @@
-.header-footer {
-    display: flex;
-    justify-content: center;
-    margin: 0 0 20px;
-  }
 
-  .form-horizontal {
+
+  .form-container {
     display: flex;
     justify-content: center;
-    margin: 0 0 20px;
-  }
+    margin-left: 30%;
+    margin-right: 30%;
+  }  
+ 
